// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set-protection-rules command set-protection-rules fails branches are set 1`] = `
"The following errors occurred:
  [2mMissing required flag organization[22m
[2m  Missing required flag repositories[22m
See more help with --help"
`;

exports[`set-protection-rules command set-protection-rules fails branches,org are set 1`] = `
"The following error occurred:
  [2mMissing required flag repositories[22m
See more help with --help"
`;

exports[`set-protection-rules command set-protection-rules fails if no flags are set 1`] = `
"The following errors occurred:
  [2mMissing required flag branches[22m
[2m  Missing required flag organization[22m
[2m  Missing required flag repositories[22m
See more help with --help"
`;
